# npviz

./: LICENSE  README.md  __init__.py  cli.py  export.py  plots.py  pyproject.toml  recorder.py  schema.py
adapters/: __init__.py  base.py  generic.py  torch_pruning.py  transformers.py
examples/neuroplastic-transformer/: events.jsonl  importance.jsonl  metrics.jsonl  snapshots.jsonl
examples/resnet56-pruning/: events.jsonl  importance.jsonl  metrics.jsonl  run_pruning.py  snapshots.jsonl
video/: __init__.py  scenes.py  styles.py
viewer/: __init__.py  app.py  callbacks.py  components.py
